--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <input type="text" id="lname" name="lname" value="Doe">
 </form>
 
-<p>Note that the form itself is not visible.</p>
-
-<p>Also note that the default width of text input fields is 20 characters.</p>
-
+ <input type="submit" value="Submit">
+  
+  
+  
 </body>
 </html>
  
